--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 carpentry: "swc"
 
 title: "Introduction to Linux"
-curriculum: "FIXME"
+curriculum: "swc-inflammation"
 # If the workshop will be a lesson pilot (for a new official lesson or
 # a lesson in The Carpentries Incubator), set pilot to "true"
 pilot: false
