--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ carpentry: "swc"
 
 title: "Introduction to Linux"
 curriculum: "swc-inflammation"
+flavor: "python"
 # If the workshop will be a lesson pilot (for a new official lesson or
 # a lesson in The Carpentries Incubator), set pilot to "true"
 pilot: false
