--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,28 @@
 # lines further down this file and add the URL to the relevant lesson site.
 carpentry: "swc"
 
-title: "Introduction to Linux"
+# This option is currently only needed for
+# Data Carpentry and Software Carpentry workshops.
+# The value of the variable will be ignored for Library Carpentry
+# workshops.
+# Possible values are:
+# dc-astronomy: for Data Carpentry Astronomy
+# dc-ecology: for Data Carpentry Ecology
+# dc-genomics: for Data Carpentry Genomics
+# dc-socsci: for Data Carpentry Social Sciences
+# dc-geospatial: for Data Carpentry Geospatial
+# swc-inflammation: for Software Carpentry based on the inflammation dataset
+# swc-gapminder: for Software Carpentry based on the Gapminder dataset
 curriculum: "swc-inflammation"
+
+# If there is both an R and python official version of a curriculum
+# (as listed on https://software-carpentry.org/lessons/ and
+# https://datacarpentry.org/lessons/), change the
+# value of the variable below ("flavor") to get the schedule and installation
+# instructions updated accordingly (valid values are 'r' or 'python').
+# Note: this is only for Data Carpentry and SWC at this time.
 flavor: "python"
+title: "Introduction to Linux"
 # If the workshop will be a lesson pilot (for a new official lesson or
 # a lesson in The Carpentries Incubator), set pilot to "true"
 pilot: false
