--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+
 #------------------------------------------------------------
 # Values for this workshop.
 #------------------------------------------------------------
@@ -20,33 +21,19 @@
 # lines further down this file and add the URL to the relevant lesson site.
 carpentry: "swc"
 
-# This option is currently only needed for
-# Data Carpentry and Software Carpentry workshops.
-# The value of the variable will be ignored for Library Carpentry
-# workshops.
-# Possible values are:
-# dc-astronomy: for Data Carpentry Astronomy
-# dc-ecology: for Data Carpentry Ecology
-# dc-genomics: for Data Carpentry Genomics
-# dc-socsci: for Data Carpentry Social Sciences
-# dc-geospatial: for Data Carpentry Geospatial
-# swc-inflammation: for Software Carpentry based on the inflammation dataset
-# swc-gapminder: for Software Carpentry based on the Gapminder dataset
-curriculum: "swc-inflammation"
+title: "Introduction to Linxu"
 
-# If there is both an R and python official version of a curriculum
-# (as listed on https://software-carpentry.org/lessons/ and
-# https://datacarpentry.org/lessons/), change the
-# value of the variable below ("flavor") to get the schedule and installation
-# instructions updated accordingly (valid values are 'r' or 'python').
-# Note: this is only for Data Carpentry and SWC at this time.
-flavor: "python"
-title: "Introduction to Linux"
 # If the workshop will be a lesson pilot (for a new official lesson or
 # a lesson in The Carpentries Incubator), set pilot to "true"
 pilot: false
 
-
+# Overall title for the Workshop.
+# This variable is used to (optionally) add a title in the "jumbotron"
+# (the grey box at the top of the page), and to the extra pages.
+# Most workshops don't use extra pages. More information about extra
+# pages are included in the README:
+# https://github.com/carpentries/workshop-template#creating-extra-pages
+title: "Workshop Title"
 
 #------------------------------------------------------------
 # Incubator workshop settings (only relevant for workshops teaching a lesson
@@ -71,7 +58,7 @@ pilot: false
 # template. Please do not modify this. If you are teaching 
 # a custom set of lessons or a single lesson, use a custom 
 # schedule.
-kind: "lesson"
+kind: "workshop"
 
 # Magic to make URLs resolve both locally and on GitHub.
 # See https://help.github.com/articles/repository-metadata-on-github-pages/.
