--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@
 # incubator_lesson_site, incubator_pre_survey, and incubator_post_survey
 # lines further down this file and add the URL to the relevant lesson site.
 carpentry: "swc"
-
-title: "Introduction to Linxu"
+curriculum: "swc-inflammation"
+title: "Introduction to Linux"
 
 # If the workshop will be a lesson pilot (for a new official lesson or
 # a lesson in The Carpentries Incubator), set pilot to "true"
